[chips] refactor view fields